# human-intervention-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/human_intervention_mcp/: __init__.py  __main__.py  app.py  browser_ui.py  config.py  coordinator.py  models.py  server.py
src/human_intervention_mcp/transports/: __init__.py  stdio.py  streamable_http.py
tests/: conftest.py  test_browser_ui.py  test_config.py  test_coordinator.py  test_models.py  test_server_cli.py  test_stdio_integration.py
